# AssetSupplier

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
Example/: CMakeLists.txt
Example/Assets/: data.asu  myDataFile  myTableFile  table.asu
Example/Assets/a/: new-file.file
Example/Assets/a/b/: ddd
Example/Assets/a/b/c/d/e/: deep-file.deep
Example/Source/: Main.cpp
SmartResourceManager/: CMakeLists.txt
SmartResourceManager/Include/SRM/: Cache.h  Common.h  Entry.h  EntryTable.h  Exception.h  FileChangeListener.h  Logging.h  Package.h  Resource.h  ResourceManager.h  SRM.h  Util.h
SmartResourceManager/Source/: Entry.cpp  EntryTable.cpp  Logging.cpp  Main.cpp  Package.cpp  ResourceManager.cpp  Util.cpp
SmartResourceManager/Source/Test/: Model.h
assets/: data.asu  myDataFile  myTableFile  table.asu
assets/a/b/: OtherShader.frag  dd  ddc
assets/a/c/e/: MyOwnShader.vert
assets/foo/: shader.fs
assets/foo/bar/: shader.vs
assets/foo/bar/baz/: foo.h
src/: Array.h  Asset.cpp  Asset.h  AssetSupplier.cpp  AssetSupplier.h  Asu.h  Common.h  Entry.cpp  Entry.h  Exception.h  FileChangeListener.cpp  FileChangeListener.h  Logging.cpp  Logging.h  Main.cpp  Model.cpp  Model.h  Package.cpp  Package.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Time.cpp  Time.h  Util.cpp  Util.h
src/Test/: Model.h
src/Trash/: DataContainer.h  Field.h  Model.cpp  Model.h  Serializable.h
